sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000       # Service port inside cluster
      targetPort: 9000 # Container port
      nodePort: 31000  # Optional: fixed NodePort, can be any 30000-32767
  type: NodePor
